[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banana"
version = "0.1.0"
description = "A local AI coding assistant evolving into an agent evaluation and reliability platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Robert (Trung Bui Thanh)" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/banana"]

[tool.pytest.ini_options]
testpaths = ["tests"]
